<resources>
    <string name="app_name">PuzzlePals</string>
    <string name="top_score">Top Score</string>
    <string name="top_score_empty_list">There is no score yet</string>
    <string name="click_pieces_help">Choose two puzzle piece to change its position</string>
    <string name="easy">Easy</string>
    <string name="game_complete">Congratulations! Game complete</string>
    <string name="hard">Hard</string>
    <string name="help">Help</string>
    <string name="logo_description">Puzzle Pals logo</string>
    <string name="menu_home">Home</string>
    <string name="new_puzzle">Again</string>
    <string name="next">Next</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="play">Play</string>
    <string name="your_score">You score:</string>
    <string name="select_img">Select Image</string>
    <string name="selected_img_description">Selected Image</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="channel_name">PuzzlePals</string>
    <string name="channel_description">Nuevo record!</string>
    <string name="settings">Settings</string>
    <string name="background_music">Background Music</string>
    <string name="change_background_music">Change Background Music</string>
    <string name="default_music">Default</string>
    <string name="error_selecting_song">Error Selecting Song</string>
    <string name="unknown_song">Unknown Song</string>
    <string name="loading_song">Loading Song...</string>
    <string name="mute">Mute</string>
    <string name="calendar_permission_required">Calendar Permission Required</string>
    <string name="calendar_permission_required_description">The Calendar permission is required to save the better scores as an important event</string>
    <string name="storage_permission_required">Storage Permission Required</string>
    <string name="storage_permission_required_description">The Storage permission is required to retrieve images to build the puzzles</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="puzzlepals_record">PuzzlePals Record</string>
    <string name="new_record">New Record</string>
    <string name="new_record_control_flag">¡New record:</string>
    <string name="new_record_with_score">New Record: %1$s!</string>
    <string name="new_record_with_score_and_level">New Record: %1$s, Level %2$s</string>
    <string name="camera">Camera</string>
    <string name="puzzle_completed_description">Puzzle Completed Image</string>
    <string name="score_header">Score</string>
    <string name="score_image_description">Score Image</string>
    <string name="start">Start</string>
    <string name="login_google">Login with Google</string>
    <string name="login_fail">Authentication Error</string>
    <string name="sing_out">Sing Out</string>
    <string name="must_be_authenticated">You must be authenticated</string>
    <string name="get_from_database_error">Error retrieving data from database</string>
    <string name="date">Date:</string>
    <string name="level">Level:</string>
    <string name="puzzle_number">Puzzle Number:</string>
    <string name="score">Score:</string>
    <string name="player">Player:</string>
    <string name="end_game">End Game!</string>
    <string name="end_game_description">You has arrive to the end of the game. There are not more puzzles.</string>
    <string name="close">Close</string>
    <string name="start_again">Start Again</string>
</resources>
